fixes z-index

--- a/app/assets/stylesheets/application/lightbox.css.scss
+++ b/app/assets/stylesheets/application/lightbox.css.scss
@@ -60,6 +60,7 @@ $lightbox-nav-height: 50px;
 
 #lightbox {
   position: fixed;
+  z-index: 1;
   top: 0;
   bottom: 0;
   left: 0;
